# MnemoKanji

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: apt.yml  ci.yml  release.yml
assets/: mnemokanji.desktop
crates/content/: Cargo.toml
crates/content/src/: main.rs  schema.sql  sentence.rs  stroke.rs  vocab.rs
crates/core/: Cargo.toml
crates/core/src/: domain.rs  lib.rs  scheduler.rs  session.rs  stats.rs
crates/data/: Cargo.toml
crates/data/src/: content.rs  lib.rs  state.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.css  main.rs
data/authored/: n4-component-actors.json  n4-dominant-readings.json  n4-keywords.json  n4-mnemonics.json  n5-component-actors.json  n5-dominant-readings.json  n5-keywords.json  n5-mnemonics.json  n5-reading-actors.json  n5-vocab-glosses.json
docs/: 01-VISION.md  02-LEARNING-METHOD.md  03-DESIGN.md  04-DATA-SOURCES.md  05-PLAN.md  06-RESEARCH.md  07-CONTENT-GENERATION.md  08-DATASET.md  09-COMPETITION-AND-ENGAGEMENT.md
scripts/: fetch-sources.sh
