[package]
name = "mnemokanji-content"
description = "MnemoKanji offline dataset builder: upstream sources -> seed.sqlite."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mnemokanji-content"
path = "src/main.rs"

[dependencies]
# Parsers (KANJIDIC2/JMdict/KanjiVG/Tatoeba/...) land in M1. See docs/08-DATASET.md.
