[package]
name = "mnemokanji-content"
description = "MnemoKanji offline dataset builder: upstream sources -> seed.sqlite."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mnemokanji-content"
path = "src/main.rs"

[dependencies]
# Embedded SQLite for the seed DB; bundled = no system dependency, same on all OSes.
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
