[package]
name = "mnemokanji-core"
description = "MnemoKanji domain logic: scheduling, session engine, learning order."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
rs-fsrs = { version = "1.2.1", features = ["serde"] }
