[package]
name = "mnemokanji-data"
description = "MnemoKanji storage layer: SQLite content repo (read-only seed) + user state store."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mnemokanji-core = { workspace = true }
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2"
serde_json = "1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
