[package]
name = "mnemokanji-ui"
description = "MnemoKanji desktop/mobile app (Dioxus)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mnemokanji"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
mnemokanji-core = { workspace = true }
mnemokanji-data = { workspace = true }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
