[package]
name = "mnemokanji-ui"
description = "MnemoKanji desktop/mobile app (Dioxus)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mnemokanji"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
mnemokanji-core = { workspace = true }
mnemokanji-data = { workspace = true }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
dirs = { version = "5", optional = true }
rfd = "0.15"

[features]
# Release builds: embed assets/seed.sqlite into the binary and extract it to the OS app-data
# dir at startup, so the app is self-contained (no external files needed to run).
bundle-seed = ["dep:dirs"]
